--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,7 @@
 {
     "name": "zolex/vom",
     "description": "Versatile Object Mapper",
-    "type": "library",
+    "type": "symfony-bundle",
     "license": "LGPL-3.0-or-later",
     "authors": [
         {
