--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -16,14 +16,14 @@ jobs:
     strategy:
       matrix:
         # Test the latest stable release
-        php: [8.1, 8.2, 8.3]
+        php: [8.1] #[8.1, 8.2, 8.3]
         deps: [stable]
-        symfony: ['^5.0']
+        symfony: ['^7.0']
         include:
           # Test lowest dependencies
-          - php: 8.1
-            deps: lowest
-            symfony: '^6.0'
+          #- php: 8.1
+          #  deps: lowest
+          #  symfony: '^6.1'
 
           # Test LTS php/Symfony
           - php: 8.2
@@ -31,9 +31,9 @@ jobs:
             symfony: '^7.0'
 
           # Test latest php/Symfony
-          - php: 8.3
-            deps: stable
-            symfony: '^7.0'
+          #- php: 8.3
+          #  deps: stable
+          #  symfony: '^7.0'
 
     steps:
       - name: Checkout code
