--- a/composer.json
+++ b/composer.json
@@ -12,9 +12,9 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^8.1",
-        "symfony/property-access": "^6.4|^7.0",
-        "symfony/serializer": "^7.0",
+        "php": ">=8.1",
+        "symfony/property-access": "^6.1|^7.0",
+        "symfony/serializer": "^6.1|^7.0",
         "phpdocumentor/reflection-docblock": "^5.3"
     },
     "autoload": {
@@ -28,7 +28,7 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.6",
+        "phpunit/phpunit": "^9.5",
         "modix/php-cs-rulesets": "^1.3",
         "phpspec/prophecy": "^1.17",
         "phpspec/prophecy-phpunit": "^2.0",
