--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -62,28 +62,7 @@ jobs:
           XDEBUG_MODE=coverage \
           vendor/bin/simple-phpunit \
           --colors=always \
-          --coverage-text \
-          --coverage-cobertura ./cobertura.xml \
-          --log-junit ./junit.xml
-
-      - name: Publish Test Report
-        uses: EnricoMi/publish-unit-test-result-action@v2
-        if: always()
-        with:
-          check_name: ${{ matrix.php }} (deps=${{ matrix.deps }}, symfony=${{ matrix.symfony }})
-          comment_title: ${{ matrix.php }} (deps=${{ matrix.deps }}, symfony=${{ matrix.symfony }})
-          report_individual_runs: true
-          compare_to_earlier_commit: true
-          files: ./junit.xml
-
-      - name: Publish Code Coverage
-        uses: 5monkeys/cobertura-action@master
-        if: always()
-        with:
-          path: ./cobertura.xml
-          minimum_coverage: 75
-          skip_covered: false
-          fail_below_threshold: 0
+          --coverage-text
 
   cs:
     name: 'Code Style'
@@ -107,4 +86,4 @@ jobs:
           composer-options: '--prefer-dist'
 
       - name: PHP-CS-Fixer
-        run: vendor/bin/php-cs-fixer --diff --dry-run --format=junit
+        run: vendor/bin/php-cs-fixer fix --diff --dry-run --format=junit
