--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -45,8 +45,11 @@ jobs:
       - name: Configure Symfony version
         run: 'echo SYMFONY_REQUIRE="${{ matrix.symfony }}" >> $GITHUB_ENV'
 
-      - name: Allow dev dependencies
-        run: 'composer config minimum-stability dev'
+      - name: "Set up problem matchers for PHP"
+        run: "echo \"::add-matcher::${{ runner.tool_cache }}/php.json\""
+
+      - name: "Set up problem matchers for phpunit/phpunit"
+        run: "echo \"::add-matcher::${{ runner.tool_cache }}/phpunit.json\""
 
       - name: Composer install
         uses: 'ramsey/composer-install@v2'
@@ -63,6 +66,13 @@ jobs:
           vendor/bin/simple-phpunit \
           --colors=always \
           --coverage-text
+          --coverage-clover=.build/clover.xml
+
+      - name: Send code coverage report to codecov.io
+        uses: codecov/codecov-action@v3.1.5
+        with:
+          files: ".build/clover.xml"
+          token: "${{ secrets.CODECOV_TOKEN }}"
 
   cs:
     name: 'Code Style'
@@ -86,4 +96,4 @@ jobs:
           composer-options: '--prefer-dist'
 
       - name: PHP-CS-Fixer
-        run: vendor/bin/php-cs-fixer fix --diff --dry-run --format=junit
+        run: vendor/bin/php-cs-fixer fix --diff --dry-run --show-progress=dots --ansi --verbose
