--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -66,13 +66,13 @@ jobs:
           vendor/bin/simple-phpunit \
           --colors=always \
           --coverage-text
-          --coverage-clover=.build/clover.xml
+          --coverage-clover=./clover.xml
 
       - name: Send code coverage report to codecov.io
         uses: codecov/codecov-action@v3.1.5
         with:
-          files: ".build/clover.xml"
-          token: "${{ secrets.CODECOV_TOKEN }}"
+          files: ./clover.xml
+          token: ${{ secrets.CODECOV_TOKEN }}
 
   cs:
     name: 'Code Style'
