--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -14,8 +14,8 @@ jobs:
     strategy:
       matrix:
         php: [8.1, 8.2, 8.3]
-        deps: stable
-        symfony: '^7.0'
+        deps: [stable]
+        symfony: ['^7.0']
         include:
           - php: 8.1
             deps: lowest
