--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -13,7 +13,7 @@ jobs:
       SYMFONY_DEPRECATIONS_HELPER: 'max[self]=0'
     strategy:
       matrix:
-        php: [8.1, 8.2, 8.3]
+        php: [8.2, 8.3]
         deps: [stable]
         symfony: ['^7.0']
         include:
