--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,7 @@
     "name": "zolex/vom",
     "description": "Versatile Object Mapper",
     "type": "symfony-bundle",
-    "license": "LGPL-3.0-or-later",
+    "license": "MIT",
     "authors": [
         {
             "name": "Andreas Linden",
