--- a/composer.json
+++ b/composer.json
@@ -14,8 +14,7 @@
     "require": {
         "php": ">=8.1",
         "symfony/property-access": "^6.1|^7.0",
-        "symfony/serializer": "^6.1|^7.0",
-        "phpdocumentor/reflection-docblock": "^5.3"
+        "symfony/serializer": "^6.1|^7.0"
     },
     "autoload": {
         "psr-4": {
