Chore: Update all examples to use the latest release and update the documentation. Re-add reflection-docblock as a direct dependency, to avoid relying on a composer `suggest` when not using symfony-framework.

--- a/examples/without-framework/composer.json
+++ b/examples/without-framework/composer.json
@@ -5,7 +5,8 @@
     "prefer-stable": true,
     "require": {
         "php": ">=8.2",
-        "zolex/vom": "dev-master"
+        "phpdocumentor/reflection-docblock": "^5.3",
+        "zolex/vom": "^0.0.4"
     },
     "config": {
         "allow-plugins": {
