--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "require": {
         "php": ">=8.1",
         "symfony/property-access": "^6.4|^7.0",
-        "symfony/serializer": "^6.4|^7.0"
+        "symfony/serializer": "^6.4|^7.0",
+        "phpdocumentor/reflection-docblock": "^5.3"
     },
     "autoload": {
         "psr-4": {
