--- a/examples/api-platform/composer.json
+++ b/examples/api-platform/composer.json
@@ -8,13 +8,17 @@
         "ext-ctype": "*",
         "ext-iconv": "*",
         "api-platform/core": "^3.2",
+        "symfony/asset": "7.0.*",
         "symfony/console": "7.0.*",
         "symfony/dotenv": "7.0.*",
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
+        "symfony/twig-bundle": "7.0.*",
         "symfony/yaml": "7.0.*",
-        "zolex/vom": "dev-master"
+        "twig/extra-bundle": "^2.12|^3.0",
+        "twig/twig": "^2.12|^3.0",
+        "zolex/vom": "^0.0.4"
     },
     "config": {
         "allow-plugins": {
