--- a/examples/symfony-framework/composer.json
+++ b/examples/symfony-framework/composer.json
@@ -13,7 +13,7 @@
         "symfony/framework-bundle": "7.0.*",
         "symfony/runtime": "7.0.*",
         "symfony/yaml": "7.0.*",
-        "zolex/vom": "dev-master"
+        "zolex/vom": "^0.0.4"
     },
     "config": {
         "allow-plugins": {
