update docs and puts things on the ignore list to not run integration when not needed

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -4,6 +4,10 @@ on:
   pull_request:
   push:
     branches: [master, feature/*]
+    paths-ignore:
+      - ./docs
+      - ./examples
+      - ./README.md
 
 jobs:
   tests:
