--- a/composer.json
+++ b/composer.json
@@ -29,12 +29,11 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^9.5",
-        "modix/php-cs-rulesets": "^1.3",
-        "phpspec/prophecy": "^1.17",
-        "phpspec/prophecy-phpunit": "^2.0",
+        "phpspec/prophecy-phpunit": "^2.1",
+        "symfony/framework-bundle": "^7.0",
         "symfony/orm-pack": "^2.4",
         "symfony/phpunit-bridge": "^6.4|^7.0",
-        "api-platform/core": "^3.2"
+        "symfony/yaml": "^7.0"
     },
     "scripts": {
         "test": "vendor/phpunit/phpunit/phpunit"
