--- a/composer.json
+++ b/composer.json
@@ -30,10 +30,10 @@
     "require-dev": {
         "phpunit/phpunit": "^9.5",
         "phpspec/prophecy-phpunit": "^2.1",
-        "symfony/framework-bundle": "^7.0",
+        "symfony/framework-bundle": "^6.4|^7.0",
         "symfony/orm-pack": "^2.4",
         "symfony/phpunit-bridge": "^6.4|^7.0",
-        "symfony/yaml": "^7.0"
+        "symfony/yaml": "^6.4|^7.0"
     },
     "scripts": {
         "test": "vendor/phpunit/phpunit/phpunit"
