--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -5,9 +5,9 @@ on:
   push:
     branches: [master, feature/*]
     paths-ignore:
-      - docs
-      - examples
-      - README.md
+      - 'docs/**'
+      - 'examples/**'
+      - 'README.md'
 
 jobs:
   tests:
