--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,8 @@
         "symfony/framework-bundle": "^6.4|^7.0",
         "symfony/orm-pack": "^2.4",
         "symfony/phpunit-bridge": "^6.4|^7.0",
-        "symfony/yaml": "^6.4|^7.0"
+        "symfony/yaml": "^6.4|^7.0",
+        "friendsofphp/php-cs-fixer": "^3.49"
     },
     "scripts": {
         "test": "vendor/phpunit/phpunit/phpunit"
