only run integration workflow on push or pr to master

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -2,8 +2,11 @@ name: Integration
 
 on:
   pull_request:
+    branches:
+      - master
   push:
-    branches: [master, feature/*]
+    branches:
+      - master
     paths-ignore:
       - 'docs/**'
       - 'examples/**'
