--- a/composer.json
+++ b/composer.json
@@ -34,10 +34,7 @@
         "symfony/orm-pack": "^2.4",
         "symfony/phpunit-bridge": "^6.4|^7.0",
         "symfony/yaml": "^6.4|^7.0",
-        "friendsofphp/php-cs-fixer": "^3.49",
-        "illuminate/contracts": "^10.0",
-        "illuminate/support": "^10.0",
-        "symfony/translation": "^6.0|^7.0"
+        "friendsofphp/php-cs-fixer": "^3.49"
     },
     "scripts": {
         "test": "vendor/phpunit/phpunit/phpunit"
