Feature: Add a Laravel Service Provider and related documentation

--- a/composer.json
+++ b/composer.json
@@ -38,5 +38,12 @@
     },
     "scripts": {
         "test": "vendor/phpunit/phpunit/phpunit"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Zolex\\VOM\\Laravel\\Providers\\VersatileObjectMapperProvider"
+            ]
+        }
     }
 }
