--- a/composer.json
+++ b/composer.json
@@ -28,16 +28,12 @@
         }
     },
     "require-dev": {
-        "phpunit/phpunit": "^9.5",
-        "phpspec/prophecy-phpunit": "^2.1",
+        "doctrine/orm": "^3.0",
         "symfony/framework-bundle": "^6.4|^7.0",
-        "symfony/orm-pack": "^2.4",
-        "symfony/phpunit-bridge": "^6.4|^7.0",
-        "symfony/yaml": "^6.4|^7.0",
-        "friendsofphp/php-cs-fixer": "^3.49"
+        "symfony/yaml": "^6.4|^7.0"
     },
     "scripts": {
-        "test": "vendor/phpunit/phpunit/phpunit"
+        "test": "tools/phpunit/vendor/bin/phpunit"
     },
     "extra": {
         "laravel": {
