--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -20,17 +20,22 @@ jobs:
       SYMFONY_DEPRECATIONS_HELPER: 'max[self]=0'
     strategy:
       matrix:
-        php: [8.2, 8.3]
-        deps: [stable]
-        symfony: [^7.0]
         include:
           - php: 8.1
             deps: lowest
-            symfony: ^6.1
+            symfony: ^6.4
 
           - php: 8.2
             deps: stable
             symfony: ^6.4
+
+          - php: 8.2
+            deps: stable
+            symfony: ^7.0
+
+          - php: 8.3
+            deps: stable
+            symfony: ^7.0
 
           - php: 8.3
             deps: latest
