Update PHPUnit to v10 and use same dependency-versions for phpunit as for package deps to avoid conflicts.

--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -69,6 +69,7 @@ jobs:
       - name: Install PHPUnit
         uses: ramsey/composer-install@v2
         with:
+          dependency-versions: ${{ matrix.deps }}
           composer-options: --prefer-dist
           working-directory: tools/phpunit
 
