--- a/composer.json
+++ b/composer.json
@@ -9,13 +9,13 @@
             "email": "zlx@gmx.de"
         }
     ],
-    "minimum-stability": "dev",
+    "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
         "php": ">=8.1",
-        "symfony/property-access": "^6.4|^7.0",
+        "symfony/property-access": "^6.2|^7.0",
         "symfony/serializer": "^6.4|^7.0",
-        "phpdocumentor/reflection-docblock": "^5.3"
+        "phpdocumentor/reflection-docblock": "^5.2"
     },
     "autoload": {
         "psr-4": {
@@ -29,8 +29,8 @@
     },
     "require-dev": {
         "doctrine/orm": "^3.0",
-        "symfony/framework-bundle": "^6.4|^7.0",
-        "symfony/yaml": "^6.4|^7.0"
+        "symfony/framework-bundle": "^6.1|^7.0",
+        "symfony/yaml": "^6.1|^7.0"
     },
     "scripts": {
         "test": "tools/phpunit/vendor/bin/phpunit"
