Tests: Add xdebug to the docker setup.

--- a/compose.yaml
+++ b/compose.yaml
@@ -7,3 +7,4 @@ services:
     command: make test
     volumes:
       - ./:/opt/vom
+      - ./xdebug.ini:/usr/local/etc/php/conf.d/docker-php-ext-xdebug.ini
