--- a/xdebug.ini
+++ b/xdebug.ini
@@ -1,5 +1,5 @@
 zend_extension=xdebug
-xdebug.idekey=website-config
+xdebug.idekey=zolex-vom
 xdebug.mode=debug
 xdebug.start_with_request=On
 xdebug.client_port=9000
