Feature: Replace the old denormalizer-dependencies feature with a backwards compatible method-dependencies feature, that can be used on constructors, factories, normalizers and denormalizers.

--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -23,7 +23,7 @@
       <directory>tests</directory>
     </testsuite>
   </testsuites>
-  <source>
+  <source ignoreSuppressionOfDeprecations="true">
     <include>
       <directory suffix=".php">src</directory>
     </include>
