--- a/tools/phpunit/composer.json
+++ b/tools/phpunit/composer.json
@@ -1,6 +1,5 @@
 {
     "require": {
-        "phpunit/phpunit": "^10.5",
-        "phpspec/prophecy-phpunit": "^2.1"
+        "phpunit/phpunit": "^10.5"
     }
 }
