--- a/.github/workflows/integration.yaml
+++ b/.github/workflows/integration.yaml
@@ -13,7 +13,7 @@ on:
       - 'README.md'
 
 jobs:
-  static:
+  static-analysis:
     name: Static Code Analysis
     runs-on: ubuntu-latest
     steps:
@@ -41,10 +41,40 @@ jobs:
       - name: Psalm
         run: tools/psalm/vendor/bin/psalm
 
+  codestyle:
+    name: Code Style
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v2
+
+      - name: Install PHP with extensions
+        uses: shivammathur/setup-php@v2
+        with:
+          coverage: xdebug
+          php-version: ${{ matrix.php }}
+          tools: 'composer:v2, flex'
+
+      - name: Install Package Deps
+        uses: ramsey/composer-install@v2
+        with:
+          dependency-versions: stable
+          composer-options: --prefer-dist
+
+      - name: Install PHP-CS-Fixer
+        uses: ramsey/composer-install@v2
+        with:
+          dependency-versions: stable
+          composer-options: --prefer-dist
+          working-directory: tools/php-cs-fixer
+
+      - name: PHP-CS-Fixer
+        run: PHP_CS_FIXER_IGNORE_ENV=1 tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --diff --dry-run --show-progress=dots --ansi --verbose
+
   tests:
     name: Test ${{ matrix.php }}, symfony=${{ matrix.symfony }}, deps=${{ matrix.deps }}
     runs-on: ubuntu-latest
-    needs: [ static ]
+    needs: [ codestyle, static-analysis ]
     env:
       SYMFONY_DEPRECATIONS_HELPER: 'max[self]=0'
     strategy:
@@ -101,10 +131,10 @@ jobs:
       - name: Run tests
         run: tools/phpunit/vendor/bin/phpunit --colors=always --testdox
 
-  cs:
-    name: Code Style & Coverage
+  coverage:
+    name: Coverage Report
     runs-on: ubuntu-latest
-    needs: [ static, tests ]
+    needs: [ codestyle, static-analysis, tests ]
     steps:
       - name: Checkout code
         uses: actions/checkout@v2
@@ -127,16 +157,6 @@ jobs:
         with:
           composer-options: --prefer-dist
           working-directory: tools/phpunit
-
-      - name: Install PHP-CS-Fixer
-        uses: ramsey/composer-install@v2
-        with:
-          dependency-versions: stable
-          composer-options: --prefer-dist
-          working-directory: tools/php-cs-fixer
-
-      - name: PHP-CS-Fixer
-        run: PHP_CS_FIXER_IGNORE_ENV=1 tools/php-cs-fixer/vendor/bin/php-cs-fixer fix --diff --dry-run --show-progress=dots --ansi --verbose
 
       - name: Create Coverage Report
         run: tools/phpunit/vendor/bin/phpunit --colors=always --coverage-text --coverage-clover=./clover.xml
