--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,11 @@
     "minimum-stability": "stable",
     "prefer-stable": true,
     "require": {
-        "php": ">=8.1",
-        "symfony/property-access": "^6.2|^7.0",
-        "symfony/serializer": "^6.4|^7.0",
-        "phpdocumentor/reflection-docblock": "^5.2"
+        "php": ">=8.2",
+        "symfony/property-access": "^7.3|^8.0",
+        "symfony/serializer": "^7.3|^8.0",
+        "symfony/type-info": "^7.3|^8.0",
+        "phpdocumentor/reflection-docblock": "^5.4"
     },
     "autoload": {
         "psr-4": {
@@ -29,8 +30,8 @@
     },
     "require-dev": {
         "doctrine/orm": "^3.0",
-        "symfony/framework-bundle": "^6.1|^7.0",
-        "symfony/yaml": "^6.1|^7.0"
+        "symfony/framework-bundle": "^7.3|^8.0",
+        "symfony/yaml": "^7.3|^8.0"
     },
     "scripts": {
         "test": "tools/phpunit/vendor/bin/phpunit"
