Deprecate: Normalizer and denormalizer methods as well as method dependencies. Hide internal deprecations during tests.

--- a/tests/Unit/Symfony/Bundle/config/packages/framework.yaml
+++ b/tests/Unit/Symfony/Bundle/config/packages/framework.yaml
@@ -4,3 +4,5 @@ framework:
     http_method_override: false
     php_errors:
         log: true
+    property_info:
+        with_constructor_extractor: true
